# p-engine

./: .gitignore  CMakeLists.txt  Global.h  README.md  clean.sh  run.sh
Camera/: Camera.cpp
Camera/include/: Camera.h
Map/: LevelManager.cpp  Tilemap.cpp  main.cpp  map.cpp
Map/Levels/: level1.txt  level2.txt  level3.txt
Map/include/: LevelManager.h  Tilemap.h
Physics/: Hitbox.cpp  Physics.cpp
Physics/include/: Hitbox.h  Physics.h
Player/: Player.cpp  Player.h  PlayerAnimator.cpp  PlayerAnimator.h  PlayerCollider.cpp  PlayerController.cpp  PlayerController.h  TestAnimation.cpp
Player/include/: Player.h  PlayerAnimator.h  PlayerCollider.h  PlayerController.h
game/: main.cpp
game/Game/: Game.cpp
game/Game/include/: Game.h
game/GameStates/: GameLevelsState.cpp  GameOverState.cpp  GamePauseState.cpp  GamePlayState.cpp  GameStateManager.cpp  MainMenuState.cpp
game/GameStates/include/: GameLevelsState.h  GameOverState.h  GamePauseState.h  GamePlayState.h  GameState.h  GameStateManager.h  MainMenuState.h
game/Levels/: Levels.h
p-engine/: CMakeLists.txt  pengine.cpp
p-engine/include/: pengine.h
p-engine/src/Animation/: Animator.cpp  Animator.h
p-engine/src/Animation/include/: Animator.h
p-engine/src/AssetManager/: TextureManager.cpp  TextureManager.h
p-engine/src/AssetManager/include/: TextureManager.h
p-engine/src/Camera/: Camera.cpp  Camera.h
p-engine/src/Collision/: Collider.cpp  CollisionSide.h
p-engine/src/Collision/include/: Collider.h
p-engine/src/GameStates/: GameOverState.cpp  GamePlayState.cpp  GameStateManager.cpp  MainMenuState.cpp
p-engine/src/GameStates/include/: GameOverState.h  GamePlayState.h  GameState.h  GameStateManager.h  MainMenuState.h
p-engine/src/Map/: LevelManager.cpp  LevelManager.h  Tilemap.cpp  Tilemap.h
p-engine/src/Map/include/: LevelManager.h  Tilemap.h
p-engine/src/Physics/: Hitbox.cpp  Hitbox.h
p-engine/src/Player/: Player.cpp  Player.h  PlayerAnimator.cpp  PlayerAnimator.h  PlayerController.cpp  PlayerController.h
p-engine/src/Player/include/: Player.h  PlayerAnimator.h  PlayerController.h
p-engine/src/Ui/: Bar.cpp  Button.cpp
p-engine/src/Ui/include/: Button.h
p-engine/src/Utils/: Global.h  Parallax.cpp  Parallax.h  TestParallax.cpp  Timer.cpp  Util.cpp
p-engine/src/Utils/include/: Global.h  Parallax.h
src/: Animator.cpp  Collider.cpp  Parallax.cpp  TextureManager.cpp  button.cpp  game.cpp  main.cpp  menu.cpp
src/AssetManager/include/: TextureManager.h
src/Camera/include/: Camera.h
src/Game/: Game.cpp
src/Game/include/: Game.h
src/Map/Levels/: level1.txt  level2.txt  level3.txt
src/Ui/: Menu.cpp
src/Utils/: Parallax.cpp  Util.cpp
src/include/: Animator.h  Bar.h  TextureManager.h  Util.h  game.h  menu.h
(+4 files in other folders)
